--- a/Web/packages.config
+++ b/Web/packages.config
@@ -6,9 +6,18 @@
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net45" />
   <package id="Lucene.Net" version="3.0.3" targetFramework="net40" />
   <package id="Lucene.Net.Contrib" version="3.0.3" targetFramework="net40" />
+  <package id="Microsoft.ApplicationInsights" version="2.7.2" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.7.2" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.7.2" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.TraceListener" version="2.6.4" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.Web" version="2.7.2" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.7.2" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.7.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.6" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.6" targetFramework="net45" />
+  <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.6" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.5" targetFramework="net45" />
@@ -17,5 +26,6 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net45" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net40" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
