--- a/Web/ApplicationInsights.config
+++ b/Web/ApplicationInsights.config
@@ -124,6 +124,11 @@
       <MaxTelemetryItemsPerSecond>5</MaxTelemetryItemsPerSecond>
       <IncludedTypes>Event</IncludedTypes>
     </Add>
+    <Add Type="Microsoft.ApplicationInsights.SnapshotCollector.SnapshotCollectorTelemetryProcessor, Microsoft.ApplicationInsights.SnapshotCollector">
+      <!-- Snapshot Debugging is usually disabled when debugging in Visual Studio, but you can enable it by setting this to true. -->
+      <IsEnabledInDeveloperMode>false</IsEnabledInDeveloperMode>
+      <!-- Other properties are documented at https://aka.ms/pnv0qt -->
+    </Add>
   </TelemetryProcessors>
   <TelemetryChannel Type="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel.ServerTelemetryChannel, Microsoft.AI.ServerTelemetryChannel"/>
   <!-- 
