--- a/Web/packages.config
+++ b/Web/packages.config
@@ -10,6 +10,7 @@
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.7.2" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.7.2" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.SnapshotCollector" version="1.3.0" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.TraceListener" version="2.6.4" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.Web" version="2.7.2" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.7.2" targetFramework="net45" />
