--- a/QuranX.DocumentModel/QuranX.DocumentModel.csproj
+++ b/QuranX.DocumentModel/QuranX.DocumentModel.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>QuranX.DocumentModel</RootNamespace>
     <AssemblyName>QuranX.DocumentModel</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>
     </SccProjectName>
@@ -96,8 +96,6 @@
     <Compile Include="TafsirDocument.cs" />
     <Compile Include="TafsirDocumentVisitor.cs" />
     <Compile Include="Verse.cs" />
-    <Compile Include="VerseRangeReference.cs" />
-    <Compile Include="VerseReference.cs" />
     <Compile Include="VerseTranslation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -122,7 +120,12 @@
   <ItemGroup>
     <None Include="Resources\quran-uthmani.xml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\QuranX.Shared\QuranX.Shared.csproj">
+      <Project>{cbffa4ca-a4b9-422e-bf7f-c99ad25bade2}</Project>
+      <Name>QuranX.Shared</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
