--- a/Web/QuranX.csproj
+++ b/Web/QuranX.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -13,7 +13,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>QuranX</RootNamespace>
     <AssemblyName>QuranX</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
@@ -17998,6 +17998,10 @@
     <ProjectReference Include="..\QuranX.DocumentModel\QuranX.DocumentModel.csproj">
       <Project>{32bd00b9-5689-45d5-ba1a-376ea8be22ec}</Project>
       <Name>QuranX.DocumentModel</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\QuranX.Shared\QuranX.Shared.csproj">
+      <Project>{cbffa4ca-a4b9-422e-bf7f-c99ad25bade2}</Project>
+      <Name>QuranX.Shared</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
