--- a/Web/packages.config
+++ b/Web/packages.config
@@ -6,7 +6,7 @@
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net45" />
   <package id="Lucene.Net" version="3.0.3" targetFramework="net40" />
   <package id="Lucene.Net.Contrib" version="3.0.3" targetFramework="net40" />
-  <package id="Microsoft.ApplicationInsights" version="2.7.2" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights" version="2.7.2" targetFramework="net45" requireReinstallation="true" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.7.2" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.7.2" targetFramework="net45" />
@@ -27,6 +27,6 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net45" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net40" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net45" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net45" requireReinstallation="true" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
