--- a/QuranX.Persistence/packages.config
+++ b/QuranX.Persistence/packages.config
@@ -1,8 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Lucene.Net" version="3.0.3" targetFramework="net471" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net471" />
   <package id="SharpZipLib" version="1.0.0" targetFramework="net471" />
-  <package id="System.Configuration.ConfigurationManager" version="4.4.1" targetFramework="net471" />
+  <package id="System.Configuration.ConfigurationManager" version="4.5.0" targetFramework="net471" />
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net471" />
+  <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net471" />
+  <package id="System.Security.Permissions" version="4.5.0" targetFramework="net471" />
+  <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net471" />
   <package id="Unity" version="5.8.11" targetFramework="net471" />
 </packages>
