--- a/QuranX.Web/packages.config
+++ b/QuranX.Web/packages.config
@@ -21,9 +21,12 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net471" />
   <package id="Modernizr" version="2.8.3" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net471" />
-  <package id="System.Configuration.ConfigurationManager" version="4.4.1" targetFramework="net471" />
+  <package id="System.Configuration.ConfigurationManager" version="4.5.0" targetFramework="net471" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net471" />
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net471" />
+  <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net471" />
+  <package id="System.Security.Permissions" version="4.5.0" targetFramework="net471" />
+  <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net471" />
   <package id="Unity" version="5.8.11" targetFramework="net471" />
   <package id="Unity.Mvc5" version="1.3.0" targetFramework="net471" />
   <package id="WebGrease" version="1.6.0" targetFramework="net471" />
