--- a/Web/packages.config
+++ b/Web/packages.config
@@ -26,6 +26,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net45" />
+  <package id="NLog" version="4.5.10" targetFramework="net471" />
   <package id="SharpZipLib" version="1.0.0" targetFramework="net471" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net45" requireReinstallation="true" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
