--- a/QuranX.DataMigration/QuranX.DataMigration.csproj
+++ b/QuranX.DataMigration/QuranX.DataMigration.csproj
@@ -127,6 +127,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Migrators\CommentaryMigrator.cs" />
     <Compile Include="Migrators\DataMigrator.cs" />
     <Compile Include="Migrators\QuranMigrator.cs" />
     <Compile Include="Program.cs" />
