--- a/QuranX.Web/QuranX.Web.csproj
+++ b/QuranX.Web/QuranX.Web.csproj
@@ -211,6 +211,14 @@
     <Content Include="App_Data\segments.gen" />
     <Content Include="App_Data\segments_2" />
     <Content Include="App_Data\_0.cfs" />
+    <Content Include="App_Data\_0.cfx" />
+    <Content Include="App_Data\_1.cfs" />
+    <Content Include="App_Data\_2.fnm" />
+    <Content Include="App_Data\_2.frq" />
+    <Content Include="App_Data\_2.nrm" />
+    <Content Include="App_Data\_2.prx" />
+    <Content Include="App_Data\_2.tii" />
+    <Content Include="App_Data\_2.tis" />
     <None Include="Properties\PublishProfiles\PetePlayground - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
