--- a/QuranX.Web/QuranX.Web.csproj
+++ b/QuranX.Web/QuranX.Web.csproj
@@ -185,7 +185,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\UnityConfig.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\CommentatorsController.cs" />
     <Compile Include="Controllers\QuranChaptersController.cs" />
     <Compile Include="Controllers\QuranVersesController.cs" />
     <Compile Include="Global.asax.cs">
@@ -242,13 +242,13 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\QuranChapters\Index.cshtml" />
     <Content Include="Views\QuranVerses\Index.cshtml" />
+    <Content Include="Views\Commentators\Index.cshtml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Views\Commentary\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
