--- a/QuranX.Web/QuranX.Web.csproj
+++ b/QuranX.Web/QuranX.Web.csproj
@@ -188,6 +188,7 @@
     <Compile Include="Builders\CommentariesForVerseBuilder.cs" />
     <Compile Include="Controllers\CommentaryController.cs" />
     <Compile Include="Controllers\CommentatorsController.cs" />
+    <Compile Include="Controllers\HadithCollectionsController.cs" />
     <Compile Include="Controllers\QuranChaptersController.cs" />
     <Compile Include="Controllers\QuranVersesController.cs" />
     <Compile Include="Controllers\VerseCommentaryController.cs" />
@@ -256,6 +257,7 @@
     <Content Include="Views\Commentary\Index.cshtml" />
     <Content Include="Views\VerseCommentary\Index.cshtml" />
     <Content Include="Views\Shared\CommentaryView.cshtml" />
+    <Content Include="Views\HadithCollections\Index.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
