--- a/QuranX.Persistence/QuranX.Persistence.csproj
+++ b/QuranX.Persistence/QuranX.Persistence.csproj
@@ -124,12 +124,15 @@
   <ItemGroup>
     <Compile Include="Extensions\BooleanQueryExtensions.cs" />
     <Compile Include="Extensions\DocumentExtensions.cs" />
+    <Compile Include="Extensions\ExpressionExtensions.cs" />
+    <Compile Include="LuceneSupport\QuranXAnalyzer.cs" />
+    <Compile Include="LuceneSupport\QuranXLetterTokenizer.cs" />
     <Compile Include="Models\Commentary.cs" />
     <Compile Include="Models\Commentator.cs" />
     <Compile Include="Models\Hadith.cs" />
     <Compile Include="Models\HadithCollection.cs" />
-    <Compile Include="Models\HadithIndexEntry.cs" />
-    <Compile Include="Models\HadithIndexDefinition.cs" />
+    <Compile Include="Models\HadithReference.cs" />
+    <Compile Include="Models\HadithReferenceDefinition.cs" />
     <Compile Include="Models\Verse.cs" />
     <Compile Include="Models\VerseText.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -147,8 +150,9 @@
     <Compile Include="Services\Repositories\Consts.cs" />
     <Compile Include="Services\Repositories\HadithCollectionRepository.cs" />
     <Compile Include="Services\Repositories\HadithCollectionWriteRepository.cs" />
+    <Compile Include="Services\Repositories\HadithWriteRepository.cs" />
     <Compile Include="Services\Repositories\VerseRepository.cs" />
-    <Compile Include="Services\Repositories\VerseWriterRepository.cs" />
+    <Compile Include="Services\Repositories\VerseWriteRepository.cs" />
     <Compile Include="Services\Settings.cs" />
   </ItemGroup>
   <ItemGroup>
