--- a/QuranX.Web.LoadTest/QuranX.Web.LoadTest.csproj
+++ b/QuranX.Web.LoadTest/QuranX.Web.LoadTest.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebTestPlugins\EnableBrowserCachingPlugin.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="LoadTest1.loadtest">
